MINOR: Update collections with Java 11 equivalents in generator, examples, and jmh-benchmarks
Signed-off-by: see-quick <maros.orsak159@gmail.com>